--- a/buildspec.yml
+++ b/buildspec.yml
@@ -16,7 +16,7 @@ phases:
 
 
 
-       - aws ecr get-login-password --region $AWS_DEFAULT_REGION | docker login --username AWS --860061945305.dkr.ecr.ap-south-1.amazonaws.com
+       - aws ecr get-login-password --region $AWS_DEFAULT_REGION | docker login --username AWS --password-stdin 860061945305.dkr.ecr.ap-south-1.amazonaws.com
 
 
 
